--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="tab_3">Tab 3</string>
     <string name="_1">1</string>
     <string name="peter">Peter</string>
+    <string name="ten_ca_khuc">Ten ca khuc</string>
 </resources>
