--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="_1">1</string>
     <string name="peter">Peter</string>
     <string name="ten_ca_khuc">Ten ca khuc</string>
+    <string name="refresh">Refresh</string>
 </resources>
